salesforce-port/force-app/main/default/objects/Trip__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Planned</fullName><default>true</default><label>Planned</label></value>
            <value><fullName>Booked</fullName><default>false</default><label>Booked</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>