salesforce-port/force-app/main/default/objects/Trip__c/fields/Traveler__c.field-meta.xml
<CustomField>
    <fullName>Traveler__c</fullName>
    <label>Traveler</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
</CustomField>